just updated the readme and requirements.txt

--- a/Multivariate_linear_regression.ipynb
+++ b/Multivariate_linear_regression.ipynb
@@ -2104,7 +2104,7 @@
    "id": "aaffff2f",
    "metadata": {},
    "source": [
-    "##### Talking Point — Logistic Regression Models (Different Regularization Strengths)\n",
+    "##### Talking Point on Logistic Regression Models)\n",
     "**Team Members:** Lesley Kamamo & Albright Maduka  \n",
     "\n",
     "We used **C=1.0** (weaker regularization) and **C=0.2** (stronger regularization).  \n",
